--- a/p1.html
+++ b/p1.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>박현정의 포트폴리오</title>
     <link rel="shortcut icon" href="images/shortcut icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap">
-    <link rel="stylesheet" href="p1.css">
+    <link rel="stylesheet" href="style/p1.css">
 </head>
-<body>
+<body class="scrollb">
     <nav id="nav">
-        <h1>PARK</h1>
+        <h1>phoenix</h1>
         <div class="mNav">
             <div class="icon-wrap">
                 <div class="icon"></div>
@@ -29,13 +30,13 @@
     </nav>
     <div id="contents">
         <div id="section1">
-            <h2>Time is <strong>gold</strong></h2>
+            <h2>텅 빈 블로그에서 <strong>휴식을...</strong></h2>
         </div>
         <div id="section2">
-            <h2>Seeing is <strong>believing</strong></h2>
+            <h2>블로그 수정 중<strong>입니다</strong></h2>
         </div>
         <div id="section3">
-            <h2>Asking costs <strong>nothing</strong></h2>
+            <h2>영어보다 한글이<strong>더 예뻐</strong></h2>
         </div>
         <div id="section4">
             <h2><strong>Better </strong>is to bow than break</h2>
