스크롤시 배경색 바뀌는 효과

--- a/p1.html
+++ b/p1.html
@@ -29,24 +29,26 @@
         </ul>
     </nav>
     <div id="contents">
-        <div id="section1">
-            <h2>텅 빈 블로그에서 <strong>휴식을...</strong></h2>
-        </div>
-        <div id="section2">
-            <h2>블로그 수정 중<strong>입니다</strong></h2>
-        </div>
-        <div id="section3">
-            <h2>영어보다 한글이<strong>더 예뻐</strong></h2>
-        </div>
-        <div id="section4">
-            <h2><strong>Better </strong>is to bow than break</h2>
-        </div>
-        <div id="section5">
-            <h2><strong>Habit </strong>is second nature</h2>
-        </div>
-        <div id="section6">
-            <h2>Pain past is <strong>pleasure</strong></h2>
-        </div>
+        <div class="inner">
+            <div id="section1" class="panel" data-color="puff-1">
+                <h2><strong>Better </strong>is to bow than break</h2>
+            </div>
+            <div id="section2" class="panel" data-color="puff-2">
+                <h2><strong>Better </strong>is to bow than break</h2>
+            </div>
+            <div id="section3" class="panel" data-color="puff-3">
+                <h2><strong>Better </strong>is to bow than break</h2>
+            </div>
+            <div id="section4" class="panel" data-color="puff-4">
+                <h2><strong>Better </strong>is to bow than break</h2>
+            </div>
+            <div id="section5" class="panel" data-color="puff-5">
+                <h2><strong>Habit </strong>is second nature</h2>
+            </div>
+            <div id="section6" class="panel" data-color="puff-6">
+                <h2>Pain past is <strong>pleasure</strong></h2>
+            </div>
+        </div><!--inner-->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
