눈 안 아픈 배경색으로 변경

--- a/p1.html
+++ b/p1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap">
     <link rel="stylesheet" href="style/p1.css">
 </head>
 <body class="scrollb">
@@ -31,22 +32,22 @@
     <div id="contents">
         <div class="inner">
             <div id="section1" class="panel" data-color="puff-1">
-                <h2><strong>Better </strong>is to bow than break</h2>
+                <h2><span>I could be red</span></h2>
             </div>
             <div id="section2" class="panel" data-color="puff-2">
-                <h2><strong>Better </strong>is to bow than break</h2>
+                <h2><span>I could be yellow</span></h2>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
-                <h2><strong>Better </strong>is to bow than break</h2>
+                <h2><span>I could be blue</span></h2>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2><strong>Better </strong>is to bow than break</h2>
+                <h2><span>I could be purple</span></h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <h2><strong>Habit </strong>is second nature</h2>
+                <h2><span>I could be green</span></h2>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
-                <h2>Pain past is <strong>pleasure</strong></h2>
+                <h2><span>I could be pink</span></h2>
             </div>
         </div><!--inner-->
     </div>
