scroll down mouse

--- a/p1.html
+++ b/p1.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>박현정의 포트폴리오</title>
-    <link rel="shortcut icon" href="images/shortcut icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/webcon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap">
     <link rel="stylesheet" href="style/p1.css">
 </head>
 <body class="scrollb">
     <nav id="nav">
-        <h1>phoenix</h1>
+        <h1><a href="#">PHOENIX</a></h1>
         <div class="mNav">
             <div class="icon-wrap">
                 <div class="icon"></div>
@@ -21,18 +20,24 @@
         </div>
 
         <ul class="menu">
-            <li class="active"><a href="#section1">Home</a></li>
-            <li><a href="#section2">About</a></li>
-            <li><a href="#section3">Project</a></li>
-            <li><a href="#section4">Design</a></li>
-            <li><a href="#section5">What:)</a></li>
-            <li><a href="#section6">Contact</a></li>
+            <li class="active"><a href="#section1">RED</a></li>
+            <li><a href="#section2">YELLOW</a></li>
+            <li><a href="#section3">BLUE</a></li>
+            <li><a href="#section4">PURPLE</a></li>
+            <li><a href="#section5">GREEN</a></li>
+            <li><a href="#section6">PINK</a></li>
         </ul>
     </nav>
     <div id="contents">
         <div class="inner">
             <div id="section1" class="panel" data-color="puff-1">
                 <h2><span>I could be red</span></h2>
+                <div class="scroll-downs">
+                    <div class="mousey">
+                        <div class="scroller"></div>
+                    </div>
+                    <p>scroll</p>
+                </div>
             </div>
             <div id="section2" class="panel" data-color="puff-2">
                 <h2><span>I could be yellow</span></h2>
