윈도우 모달창 (애플) 만들기

--- a/p1.html
+++ b/p1.html
@@ -43,6 +43,28 @@
                 <h2><span>I could be yellow</span></h2>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
+                <div class="window-container">
+                    <div class="row">
+                        <div class="column left">
+                            <span class="dot" style="background:#ED594A;"></span>
+                            <span class="dot" style="background:#FDD800;"></span>
+                            <span class="dot" style="background:#5AC05A;"></span>
+                        </div>
+                        <div class="column middle">
+                            <input type="text" value="puiux.kr">
+                        </div>
+                        <div class="column right">
+                            <div style="float:right">
+                                <span class="bar"></span>
+                                <span class="bar"></span>
+                                <span class="bar"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="window-content">
+                        <p>여기에 작업물 넣기</p>
+                    </div>
+                </div>
                 <h2><span>I could be blue</span></h2>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
