--- a/p1.html
+++ b/p1.html
@@ -41,6 +41,9 @@
             </div>
             <div id="section2" class="panel" data-color="puff-2">
                 <h2><span>I could be yellow</span></h2>
+                <div class="about_box">
+                    <p class="message">yellow!</p>
+                </div>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
                 <div class="window-container">
@@ -68,7 +71,8 @@
                 <h2><span>I could be blue</span></h2>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2><span>I could be purple</span></h2>
+                <h2><span>I could be</span></h2>
+                <h2><span>purple</span></h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
                 <h2><span>I could be green</span></h2>
