purple - background clip text

--- a/p1.html
+++ b/p1.html
@@ -31,7 +31,7 @@
     <div id="contents">
         <div class="inner">
             <div id="section1" class="panel" data-color="puff-1">
-                <h2><span>I could be red</span></h2>
+                <h2>I could be red</h2>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div id="section2" class="panel" data-color="puff-2">
-                <h2><span>I could be yellow</span></h2>
+                <h2>I could be yellow</h2>
                 <div class="about_box">
                     <p class="message">yellow!</p>
                 </div>
@@ -68,17 +68,17 @@
                         <p>여기에 작업물 넣기</p>
                     </div>
                 </div>
-                <h2><span>I could be blue</span></h2>
+                <h2>I could be blue</h2>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2><span>I could be</span></h2>
-                <h2><span>purple</span></h2>
+                <h2 class="purple purple1">I could be</h2>
+                <h2 class="purple purple2">purple</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <h2><span>I could be green</span></h2>
+                <h2>I could be green</h2>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
-                <h2><span>I could be pink</span></h2>
+                <h2>I could be pink</h2>
             </div>
         </div><!--inner-->
     </div>
