반응형 넘침 수정 (blue section)

--- a/p1.html
+++ b/p1.html
@@ -42,7 +42,7 @@
             <div id="section2" class="panel" data-color="puff-2">
                 <h2>I could be yellow</h2>
                 <div class="about_box">
-                    <p class="message">yellow!</p>
+                    <p>I could be yellow</p>
                 </div>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
