blue section 슬라이드 만드는 중

--- a/p1.html
+++ b/p1.html
@@ -46,6 +46,7 @@
                 </div>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
+                <h2>I could be blue</h2>
                 <div class="window-container">
                     <div class="row">
                         <div class="column left">
@@ -54,7 +55,7 @@
                             <span class="dot" style="background:#5AC05A;"></span>
                         </div>
                         <div class="column middle">
-                            <input type="text" value="puiux.kr">
+                            <input type="text" value="puiux.kr/리그오브레전드">
                         </div>
                         <div class="column right">
                             <div style="float:right">
@@ -64,11 +65,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="window-content">
-                        <p>여기에 작업물 넣기</p>
+                    <div class="main_visual">
+                        <ul class="visual_container">
+                            <li>lol</li>
+                            <li>mnh</li>
+                            <li>dat</li>
+                            <li>cello</li>
+                        </ul>
                     </div>
-                </div>
-                <h2>I could be blue</h2>
+                </div><!--window-container-->
             </div>
             <div id="section4" class="panel" data-color="puff-4">
                 <h2 class="purple purple1">I could be</h2>
