슬라이드 만들기, 버튼 만들기

--- a/p1.html
+++ b/p1.html
@@ -55,7 +55,7 @@
                             <span class="dot" style="background:#5AC05A;"></span>
                         </div>
                         <div class="column middle">
-                            <input type="text" value="puiux.kr/리그오브레전드">
+                            <input type="text" value="http://박현정의 포트폴리오" readonly>
                         </div>
                         <div class="column right">
                             <div style="float:right">
@@ -67,13 +67,17 @@
                     </div>
                     <div class="main_visual">
                         <ul class="visual_container">
-                            <li>lol</li>
-                            <li>mnh</li>
-                            <li>dat</li>
-                            <li>cello</li>
+                            <li><span class="blind">설명1</span></li>
+                            <li><span class="blind">설명1</span></li>
+                            <li><span class="blind">설명1</span></li>
+                            <li><span class="blind">설명1</span></li>
                         </ul>
                     </div>
                 </div><!--window-container-->
+                <ul class="slide_btn">
+                    <li class="back"></li>
+                    <li class="next"></li>
+                </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
                 <h2 class="purple purple1">I could be</h2>
