--- a/p1.html
+++ b/p1.html
@@ -80,8 +80,7 @@
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2 class="purple purple1">I could be</h2>
-                <h2 class="purple purple2">purple</h2>
+                <h2>I could be purple</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
                 <h2>I could be green</h2>
