green section text effect 실험중

--- a/p1.html
+++ b/p1.html
@@ -12,7 +12,7 @@
 </head>
 <body class="scrollb">
     <nav id="nav">
-        <h1><a href="#">PHOENIX</a></h1>
+        <h1><a href="#">Colors</a></h1>
         <div class="mNav">
             <div class="icon-wrap">
                 <div class="icon"></div>
@@ -80,10 +80,22 @@
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2>I could be purple</h2>
+                <h2><div class="glitch" data-text="I COULD BE PURPLE">I could be purple</div></h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <h2>I could be green</h2>
+                <h2>I could<br/> be green</h2>
+                <h2 class="birth">
+                    <span>1996</span><span>年</span><span>8</span><span>月</span><span>6</span><span>日</span>
+                </h2>
+                <h2>한국어 한국어 한국어</h2>
+                <h2>ENGLISH2</h2>
+                <h2>아무말 생성기 중</h2>
+                <h2>배열 맞추는 중</h2>
+                <h2>INTERNET</h2>
+                <h2>CHROME</h2>
+                <h2>FireFox</h2>
+                <h2>SAFARI</h2>
+                <h2>JUST LIKE</h2>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <h2>I could be pink</h2>
