about box(section2), nav a:hover:after

--- a/p1.html
+++ b/p1.html
@@ -42,7 +42,15 @@
             <div id="section2" class="panel" data-color="puff-2">
                 <h2>I could be yellow</h2>
                 <div class="about_box">
-                    <p>I could be yellow</p>
+                    <div>
+                        <div></div>
+                    </div>
+                    <div>
+                        <div></div>
+                    </div>
+                    <div>
+                        <div></div>
+                    </div>
                 </div>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
@@ -66,7 +74,7 @@
                         </div>
                     </div>
                     <div class="main_visual">
-                        <ul class="visual_container">
+                        <ul class="visual_container">         
                             <li><span class="blind">설명1</span></li>
                             <li><span class="blind">설명1</span></li>
                             <li><span class="blind">설명1</span></li>
@@ -80,22 +88,10 @@
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2><div class="glitch" data-text="I COULD BE PURPLE">I could be purple</div></h2>
+                <h2>I could be purple</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <h2>I could<br/> be green</h2>
-                <h2 class="birth">
-                    <span>1996</span><span>年</span><span>8</span><span>月</span><span>6</span><span>日</span>
-                </h2>
-                <h2>한국어 한국어 한국어</h2>
-                <h2>ENGLISH2</h2>
-                <h2>아무말 생성기 중</h2>
-                <h2>배열 맞추는 중</h2>
-                <h2>INTERNET</h2>
-                <h2>CHROME</h2>
-                <h2>FireFox</h2>
-                <h2>SAFARI</h2>
-                <h2>JUST LIKE</h2>
+                <h2>I could be green</h2>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <h2>I could be pink</h2>
