about box(skill set), slide btn animation

--- a/p1.html
+++ b/p1.html
@@ -43,13 +43,19 @@
                 <h2>I could be yellow</h2>
                 <div class="about_box">
                     <div>
-                        <div></div>
+                        <div><span class="blind">HTML5 - 90%</span></div>
                     </div>
                     <div>
-                        <div></div>
+                        <div><span class="blind">CSS3 - 90%</span></div>
                     </div>
                     <div>
-                        <div></div>
+                        <div><span class="blind">JAVASCRIPT - 80%</span></div>
+                    </div>
+                    <div>
+                        <div><span class="blind">PS, AI- 80%</span></div>
+                    </div>
+                    <div>
+                        <div><span class="blind">XD - 80%</span></div>
                     </div>
                 </div>
             </div>
