--- a/p1.html
+++ b/p1.html
@@ -31,7 +31,7 @@
     <div id="contents">
         <div class="inner">
             <div id="section1" class="panel" data-color="puff-1">
-                <h2>I could be red</h2>
+                <h2 id="autoType">I could be red</h2>
                 <div class="scroll-downs">
                     <div class="mousey">
                         <div class="scroller"></div>
@@ -95,12 +95,16 @@
             </div>
             <div id="section4" class="panel" data-color="puff-4">
                 <h2>I could be purple</h2>
+                <figure class="ipad"><span class="blind">iPad Pro</span></figure>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
                 <h2>I could be green</h2>
+                <figure class="iphone">iPhone XS</figure>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
-                <h2>I could be pink</h2>
+                <div class="sign">
+                    <h2><span class="fast-flicker">I</span> COULD <span class="flicker"> BE</span> PINK</h2>
+                </div>
             </div>
         </div><!--inner-->
     </div>
