xd prototype video 삽입

--- a/p1.html
+++ b/p1.html
@@ -99,7 +99,12 @@
             </div>
             <div id="section5" class="panel" data-color="puff-5">
                 <h2>I could be green</h2>
-                <figure class="iphone">iPhone XS</figure>
+                <figure class="iphone">
+                    <span class="blind">iPhone XS</span>
+                    <video autoplay muted loop id="myVideo">
+                        <source src="images/xd.mp4" type="video/mp4">
+                      </video>
+                </figure>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <div class="sign">
