delete pad section

--- a/p1.html
+++ b/p1.html
@@ -95,18 +95,18 @@
             </div>
             <div id="section4" class="panel" data-color="puff-4">
                 <h2>I could be purple</h2>
-                <figure class="ipad"><span class="blind">iPad Pro</span></figure>
-            </div>
-            <div id="section5" class="panel" data-color="puff-5">
-                <h2>I could be green</h2>
                 <figure class="iphone">
                     <span class="blind">iPhone XS</span>
                     <video autoplay muted loop id="myVideo">
                         <source src="images/xd.mp4" type="video/mp4">
-                      </video>
+                    </video>
                 </figure>
             </div>
+            <div id="section5" class="panel" data-color="puff-5">
+                <h2>I could be green</h2>
+            </div>
             <div id="section6" class="panel" data-color="puff-6">
+                <section></section><!--bricks-->
                 <div class="sign">
                     <h2><span class="fast-flicker">I</span> COULD <span class="flicker"> BE</span> PINK</h2>
                 </div>
