slide 변경(애니메이션 작동을 더 원활하게 하기 위해)

--- a/p1.html
+++ b/p1.html
@@ -81,16 +81,16 @@
                     </div>
                     <div class="main_visual">
                         <ul class="visual_container">         
-                            <li><span class="blind">설명1</span></li>
-                            <li><span class="blind">설명1</span></li>
-                            <li><span class="blind">설명1</span></li>
-                            <li><span class="blind">설명1</span></li>
+                            <li class="mySlides fade"><span class="blind">설명1</span></li>
+                            <li class="mySlides fade"><span class="blind">설명1</span></li>
+                            <li class="mySlides fade"><span class="blind">설명1</span></li>
+                            <li class="mySlides fade"><span class="blind">설명1</span></li>
                         </ul>
                     </div>
                 </div><!--window-container-->
                 <ul class="slide_btn">
-                    <li class="back"></li>
-                    <li class="next"></li>
+                    <li class="prev" onclick="plusSlides(-1)"></li>
+                    <li class="next" onclick="plusSlides(1)"></li>
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
