--- a/p1.html
+++ b/p1.html
@@ -103,7 +103,7 @@
                 </figure>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <h2>I could be green</h2>
+                <h2>I could be green or</h2>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <section></section><!--bricks-->
