메뉴 이름 수정

--- a/p1.html
+++ b/p1.html
@@ -20,12 +20,12 @@
         </div>
 
         <ul class="menu">
-            <li class="active"><a href="#section1">RED</a></li>
-            <li><a href="#section2">YELLOW</a></li>
-            <li><a href="#section3">BLUE</a></li>
-            <li><a href="#section4">PURPLE</a></li>
-            <li><a href="#section5">GREEN</a></li>
-            <li><a href="#section6">PINK</a></li>
+            <li class="active"><a href="#section1">Home</a></li>
+            <li><a href="#section2">Skill</a></li>
+            <li><a href="#section3">Web</a></li>
+            <li><a href="#section4">App</a></li>
+            <li><a href="#section5">About</a></li>
+            <li><a href="#section6">Contact</a></li>
         </ul>
     </nav>
     <div id="contents">
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div id="section2" class="panel" data-color="puff-2">
-                <h2>I could be yellow</h2>
+                <h2>My skills</h2>
                 <div class="about_box">
                     <div>
                         <div><span class="blind">HTML5 - 90%</span></div>
@@ -49,18 +49,18 @@
                         <div><span class="blind">CSS3 - 90%</span></div>
                     </div>
                     <div>
-                        <div><span class="blind">JAVASCRIPT - 80%</span></div>
+                        <div><span class="blind">JAVASCRIPT - 70%</span></div>
                     </div>
                     <div>
-                        <div><span class="blind">PS, AI- 80%</span></div>
+                        <div><span class="blind">PS, AI- 70%</span></div>
                     </div>
                     <div>
-                        <div><span class="blind">XD - 80%</span></div>
+                        <div><span class="blind">XD - 70%</span></div>
                     </div>
                 </div>
             </div>
             <div id="section3" class="panel" data-color="puff-3">
-                <h2>I could be blue</h2>
+                <h2>Web project</h2>
                 <div class="window-container">
                     <div class="row">
                         <div class="column left">
@@ -69,7 +69,7 @@
                             <span class="dot" style="background:#5AC05A;"></span>
                         </div>
                         <div class="column middle">
-                            <input type="text" value="http://박현정의 포트폴리오" readonly>
+                            <input type="text" value="http://Hyeonjeong's portfolio" readonly>
                         </div>
                         <div class="column right">
                             <div style="float:right">
@@ -94,20 +94,14 @@
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2>I could be purple</h2>
-                <figure class="iphone">
-                    <span class="blind">iPhone XS</span>
-                    <video autoplay muted loop id="myVideo">
-                        <source src="images/xd.mp4" type="video/mp4">
-                    </video>
-                </figure>
+                <h2>UI XD Design</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <section></section><!--bricks-->
                 <div class="sign">
-                    <h2><span class="fast-flicker">I</span> COULD <span class="flicker"> BE</span> PINK</h2>
+                    <h2><span class="fast-flicker">H</span>yeon<span class="flicker">-J</span>eong</h2>
                 </div>
             </div>
         </div><!--inner-->
