--- a/p1.html
+++ b/p1.html
@@ -94,9 +94,26 @@
                 </ul>
             </div>
             <div id="section4" class="panel" data-color="puff-4">
-                <h2>UI XD Design</h2>
+                <h2>App Design</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
+                <div class="tab">
+                    <button class="tablinks" onclick="tabMenu(event, 'London')" id="defaultOpen">London</button>
+                    <button class="tablinks" onclick="tabMenu(event, 'Paris')">Paris</button>
+                    <button class="tablinks" onclick="tabMenu(event, 'Tokyo')">Tokyo</button>
+                </div>
+                <div id="London" class="tabcontent">
+                    <h3>London</h3>
+                    <p>London is the capital city of England.</p>
+                </div>
+                <div id="Paris" class="tabcontent">
+                    <h3>Paris</h3>
+                    <p>Paris is the capital of France.</p> 
+                </div>
+                <div id="Tokyo" class="tabcontent">
+                    <h3>Tokyo</h3>
+                    <p>Tokyo is the capital of Japan.</p>
+                </div>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
                 <section></section><!--bricks-->
