--- a/p1.html
+++ b/p1.html
@@ -97,22 +97,42 @@
                 <h2>App Design</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <div class="tab">
-                    <button class="tablinks" onclick="tabMenu(event, 'London')" id="defaultOpen">London</button>
-                    <button class="tablinks" onclick="tabMenu(event, 'Paris')">Paris</button>
-                    <button class="tablinks" onclick="tabMenu(event, 'Tokyo')">Tokyo</button>
-                </div>
-                <div id="London" class="tabcontent">
-                    <h3>London</h3>
-                    <p>London is the capital city of England.</p>
-                </div>
-                <div id="Paris" class="tabcontent">
-                    <h3>Paris</h3>
-                    <p>Paris is the capital of France.</p> 
-                </div>
-                <div id="Tokyo" class="tabcontent">
-                    <h3>Tokyo</h3>
-                    <p>Tokyo is the capital of Japan.</p>
+                <div>
+                    <div class="tab">
+                        <button class="tablinks" onclick="tabMenu(event, 'about1')" id="defaultOpen"></button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about2')">2</button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about3')">3</button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about4')">4</button>
+                    </div>
+                    <div id="about1" class="tabcontent">
+                        <p>키워드1</p>
+                        <p>키워드2</p>
+                        <p>키워드3</p>
+                        <p>키워드4</p>
+                        <p>키워드5</p>
+                    </div>
+                    <div id="about2" class="tabcontent">
+                        <p>학력1</p>
+                        <p>학력2</p>
+                        <p>학력3</p>
+                        <p>학력4</p>
+                    </div>
+                    <div id="about3" class="tabcontent">
+                        <p>성격1</p>
+                        <p>성격2</p>
+                        <p>성격3</p>
+                        <p>성격4</p>
+                        <p>성격5</p>
+                        <p>성격6</p>
+                    </div>
+                    <div id="about4" class="tabcontent">
+                        <p>이럴 때 잘해요1</p>
+                        <p>이럴 때 잘해요2</p>
+                        <p>이럴 때 잘해요3</p>
+                        <p>이럴 때 잘해요4</p>
+                        <p>이럴 때 잘해요5</p>
+                        <p>이럴 때 잘해요6</p>
+                    </div>
                 </div>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
