active on image

--- a/p1.html
+++ b/p1.html
@@ -99,10 +99,10 @@
             <div id="section5" class="panel" data-color="puff-5">
                 <div>
                     <div class="tab">
-                        <button class="tablinks" onclick="tabMenu(event, 'about1')" id="defaultOpen"></button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about2')">2</button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about3')">3</button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about4')">4</button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about1')"><span class="blind">Hyeonjeong is...</span></button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about2')"><span class="blind">Educations</span></button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about3')"><span class="blind">Characters</span></button>
+                        <button class="tablinks" onclick="tabMenu(event, 'about4')"><span class="blind">Advantages</span></button>
                     </div>
                     <div id="about1" class="tabcontent">
                         <p>키워드1</p>
