facebook message concept

--- a/p1.html
+++ b/p1.html
@@ -97,42 +97,34 @@
                 <h2>App Design</h2>
             </div>
             <div id="section5" class="panel" data-color="puff-5">
-                <div>
-                    <div class="tab">
-                        <button class="tablinks" onclick="tabMenu(event, 'about1')"><span class="blind">Hyeonjeong is...</span></button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about2')"><span class="blind">Educations</span></button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about3')"><span class="blind">Characters</span></button>
-                        <button class="tablinks" onclick="tabMenu(event, 'about4')"><span class="blind">Advantages</span></button>
+                <div class="messenger">
+                    <div class="m1">
+                        <div class="w1">
+                            <p>요즘 뭐하고 지내고 있어?</p>
+                        </div>
+                        <div class="w2">
+                            <p>매일 하루에 1커밋을 하고 있어</p>
+                        </div>
+                        <div class="w1">
+                            <p>매일 하는 이유가 있어?</p>
+                        </div>
+                        <div class="w2">
+                            <p>끊임없이 공부를 해야한다고 생각이 들어</p>
+                        </div>
+                        <div class="w1">
+                            <p>흐음... 어째서?</p>
+                        </div>
+                        <div class="w2">
+                            <p>내가 하는 공부는 디자인과 코드 두가지 매우 중요해</p>
+                        </div>
+                        <div class="w1">
+                            <p>행운을 빌어!</p>
+                        </div>
+                        <div class="w2">
+                            <p>고마워!</p>
+                        </div>
                     </div>
-                    <div id="about1" class="tabcontent">
-                        <p>키워드1</p>
-                        <p>키워드2</p>
-                        <p>키워드3</p>
-                        <p>키워드4</p>
-                        <p>키워드5</p>
-                    </div>
-                    <div id="about2" class="tabcontent">
-                        <p>학력1</p>
-                        <p>학력2</p>
-                        <p>학력3</p>
-                        <p>학력4</p>
-                    </div>
-                    <div id="about3" class="tabcontent">
-                        <p>성격1</p>
-                        <p>성격2</p>
-                        <p>성격3</p>
-                        <p>성격4</p>
-                        <p>성격5</p>
-                        <p>성격6</p>
-                    </div>
-                    <div id="about4" class="tabcontent">
-                        <p>이럴 때 잘해요1</p>
-                        <p>이럴 때 잘해요2</p>
-                        <p>이럴 때 잘해요3</p>
-                        <p>이럴 때 잘해요4</p>
-                        <p>이럴 때 잘해요5</p>
-                        <p>이럴 때 잘해요6</p>
-                    </div>
+                    <div class="m2"></div>
                 </div>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
