--- a/p1.html
+++ b/p1.html
@@ -41,7 +41,7 @@
             </div>
             <div id="section2" class="panel" data-color="puff-2">
                 <h2>My skills</h2>
-                <div class="about_box">
+                <div class="skill_box">
                     <div>
                         <div><span class="blind">HTML5 - 90%</span></div>
                     </div>
@@ -100,31 +100,51 @@
                 <div class="messenger">
                     <div class="m1">
                         <div class="w1">
-                            <p>요즘 뭐하고 지내고 있어?</p>
+                            <p>내용1...... 내용2....</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w2">
-                            <p>매일 하루에 1커밋을 하고 있어</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w1">
-                            <p>매일 하는 이유가 있어?</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w2">
-                            <p>끊임없이 공부를 해야한다고 생각이 들어</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w1">
-                            <p>흐음... 어째서?</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w2">
-                            <p>내가 하는 공부는 디자인과 코드 두가지 매우 중요해</p>
+                            <p>내용1...... 내용2....</p>
+                            <p>내용1...... 내용2....</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w1">
-                            <p>행운을 빌어!</p>
+                            <p>내용1...... 내용2....</p>
+                            <p>내용1...... 내용2....</p>
                         </div>
                         <div class="w2">
-                            <p>고마워!</p>
+                            <p>내용1...... 내용2....</p>
+                        </div>
+                        <div class="type">
                         </div>
                     </div>
-                    <div class="m2"></div>
+                    <div class="m2">
+                        <div>
+                            <p></p>
+                            <h3>Lena Park</h3>
+                            <p>Yatap, Seongnam-si</p>
+                        </div>
+                        <div>
+                            <p></p>
+                            <h3>You</h3>
+                            <p>Korea</p>
+                        </div>
+                    </div>
+                    <div class="m3">
+                        <input type="text" placeholder="type a message...">
+                    </div>
                 </div>
             </div>
             <div id="section6" class="panel" data-color="puff-6">
