--- a/p1.html
+++ b/p1.html
@@ -132,12 +132,12 @@
                     </div>
                     <div class="m2">
                         <div>
-                            <p></p>
+                            <p class="park_photo"></p>
                             <h3>Lena Park</h3>
                             <p>Yatap, Seongnam-si</p>
                         </div>
                         <div>
-                            <p></p>
+                            <p class="user_photo"></p>
                             <h3>You</h3>
                             <p>Korea</p>
                         </div>
