--- a/p1.html
+++ b/p1.html
@@ -100,32 +100,30 @@
                 <div class="messenger">
                     <div class="m1">
                         <div class="w1">
-                            <p>내용1...... 내용2....</p>
-                            <p>내용1...... 내용2....</p>
+                            <p>퍼블리셔 박현정입니다! 궁금한 점을 물어봐주세요.</p>
                         </div>
                         <div class="w2">
-                            <p>내용1...... 내용2....</p>
+                            <p>안녕하세요... :)</p>
+                            <p>포트폴리오가 colorful하네요!</p>
                         </div>
                         <div class="w1">
-                            <p>내용1...... 내용2....</p>
+                            <p>저의 다양한 모습을 보려드리고 싶어서 꾸미게 되었습니다!</p>
                         </div>
                         <div class="w2">
-                            <p>내용1...... 내용2....</p>
+                            <p>요즘은 어떤 일을 하면서 보내고 계신가요?</p>
                         </div>
                         <div class="w1">
-                            <p>내용1...... 내용2....</p>
+                            <p>웹포스터를 만들며 취미생활을 즐기고 있어요</p>
                         </div>
                         <div class="w2">
-                            <p>내용1...... 내용2....</p>
-                            <p>내용1...... 내용2....</p>
-                            <p>내용1...... 내용2....</p>
+                            <p>어떤 게임포스터인지 궁금하네요!</p>
+                            <p>구경 할 수 있을까요?</p>
                         </div>
                         <div class="w1">
-                            <p>내용1...... 내용2....</p>
-                            <p>내용1...... 내용2....</p>
+                            <p>제가 만든 포스터들은 <a href="https://2rel.me">여기</a>서 보실 수 있습니다!</p>
                         </div>
                         <div class="w2">
-                            <p>내용1...... 내용2....</p>
+                            <p>네 재미있게 구경해보도록 하겠습니다</p>
                         </div>
                         <div class="type">
                         </div>
