--- a/p1.html
+++ b/p1.html
@@ -150,6 +150,11 @@
                 <div class="sign">
                     <h2><span class="fast-flicker">H</span>yeon<span class="flicker">-J</span>eong</h2>
                 </div>
+                <div class="sns">
+                    <p> - Github <span class="flicker">nadyungkr</span></p>
+                    <p> - Design-Blog <span class="flicker">LoL Poster</span></p>
+                    <p> - E-mail <span class="flicker">puiux@kakao.com</span></p>
+                </div>
             </div>
         </div><!--inner-->
     </div>
