sns neon animation 변경

--- a/p1.html
+++ b/p1.html
@@ -151,9 +151,9 @@
                     <h2><span class="fast-flicker">H</span>yeon<span class="flicker">-J</span>eong</h2>
                 </div>
                 <div class="sns">
-                    <p> - Github <span class="flicker">nadyungkr</span></p>
-                    <p> - Design-Blog <span class="flicker">LoL Poster</span></p>
-                    <p> - E-mail <span class="flicker">puiux@kakao.com</span></p>
+                    <p> - Github <a href="https://github.com/nadyungkr" target="_blank" class="flicker">nadyungkr</a></p>
+                    <p> - Design-Blog <a href="https://2rel.me/" target="_blank" class="flicker">LoL Web-Poster</a></p>
+                    <p> - E-mail <a href="mailto:puiux@kakao.com" class="flicker">puiux@kakao.com</a></p>
                 </div>
             </div>
         </div><!--inner-->
