slide 링크 연결(자세히보기)

--- a/p1.html
+++ b/p1.html
@@ -81,10 +81,10 @@
                     </div>
                     <div class="main_visual">
                         <ul class="visual_container">         
-                            <li class="mySlides fade"><span class="blind">설명1</span></li>
-                            <li class="mySlides fade"><span class="blind">설명1</span></li>
-                            <li class="mySlides fade"><span class="blind">설명1</span></li>
-                            <li class="mySlides fade"><span class="blind">설명1</span></li>
+                            <li class="mySlides fade"><span class="blind">셀로(Cello) 반응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/cello/cello" target="_blank" class="go_more">자세히 보기</a></li>
+                            <li class="mySlides fade"><span class="blind">DA 테크놀로지 적응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/dat/dat" target="_blank" class="go_more">자세히 보기</a></li>
+                            <li class="mySlides fade"><span class="blind">MNH 엔터테인먼트 적응형 홈페이지(클론코딩)입니다</span><a href="https://puiux.kr/mnh/mnh" target="_blank" class="go_more">자세히 보기</a></li>
+                            <li class="mySlides fade"><span class="blind">League of Legends(2019 KR) 적응형 홈페이지(클론코딩)입니다 </span><a href="https://puiux.kr/lol/lol" target="_blank" class="go_more">자세히 보기</a></li>
                         </ul>
                     </div>
                 </div><!--window-container-->
